--- a/src/app/modules/site/home/home.component.html
+++ b/src/app/modules/site/home/home.component.html
@@ -42,7 +42,7 @@
 							<ul class="top-link">
 								<li><a href="#">About</a></li>
 								<li><a href="#">Doctors</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a routerLink="/contact">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
 							<!-- End Contact -->
@@ -96,7 +96,7 @@
 													<li><a href="blog-single.html">Blog Details</a></li>
 												</ul>
 											</li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li><a [routerLink]="['/contact']">Contact Us</a></li>
 										</ul>
 									</nav>
 								</div>
